added info in all places code:0

--- a/lonavala/monumnts.html
+++ b/lonavala/monumnts.html
@@ -44,6 +44,10 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Family-friendly museum featuring lifelike wax replicas of Indian & international celebrities.
+            </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 At a distance of 1 km from Lonavala Railway Station, Sunil's Celebrity Wax Museum is situated in
@@ -69,11 +73,18 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Lohagad is one of the many hill forts of Maharashtra state in India. Situated close to the hill station
+                Lonavala and 52 km northwest of Pune, Lohagad rises to an elevation of 1,033 m above sea level. The fort
+                is connected to the neighboring Visapur fort by a small range.</p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
-                At a distance of 11 km from Lonavala, 66 km from Pune & 114 km from Mumbai, the Lohagad Fort (Iron Fort) is a historical fort situated along the Sahyadri hills in Lonavala region of Maharashtra. 
-                It is one of the best tourist places to visit in Lonavala and also one of the popular historical places in Maharashtra that can be visited as part of Lonavala tour packages.
-                 It is also among the popular trekking places to visit near Pune & Mumbai.</p><br>
+                At a distance of 11 km from Lonavala, 66 km from Pune & 114 km from Mumbai, the Lohagad Fort (Iron Fort)
+                is a historical fort situated along the Sahyadri hills in Lonavala region of Maharashtra.
+                It is one of the best tourist places to visit in Lonavala and also one of the popular historical places
+                in Maharashtra that can be visited as part of Lonavala tour packages.
+                It is also among the popular trekking places to visit near Pune & Mumbai.</p><br>
             <table class="itble class r1">
                 <tr>
                     <td class="r1">Visiting time</td>
@@ -85,8 +96,9 @@
                 </tr>
             </table>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.9692570673437!2d73.47367311489556!3d18.710194487298793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2a9e5ec73dc55%3A0x40175d3a5814b5d!2sLohagad%20Fort%2C%20Lohagad%20Trek%20Rd%2C%20Maharashtra%20410406!5e0!3m2!1sen!2sin!4v1615389100674!5m2!1sen!2sin"  
-           id="map2" class="map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.9692570673437!2d73.47367311489556!3d18.710194487298793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2a9e5ec73dc55%3A0x40175d3a5814b5d!2sLohagad%20Fort%2C%20Lohagad%20Trek%20Rd%2C%20Maharashtra%20410406!5e0!3m2!1sen!2sin!4v1615389100674!5m2!1sen!2sin"
+            id="map2" class="map">
         </iframe>
 
         <div class="hotelp" id="hotelp">
@@ -102,7 +114,7 @@
                 <li><a href="https://www.google.com/travel/hotels/s/GU61n">Hotel Metropark</a></li>
                 <li><a href="https://www.google.com/travel/hotels/s/zpe1t">Rumourss Sky Villa & Resort Lonavala</a></li>
                 <li><a href="https://www.google.com/travel/hotels/s/ZsKn2">Lake View Resort</a></li>
-            </ul> 
+            </ul>
         </div>
 
     </div>
