--- a/lonavala/trek_point.html
+++ b/lonavala/trek_point.html
@@ -44,41 +44,56 @@
 
         </div>
         <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Reachability</h3>
+            <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
-                At a distance of 12 km from Lonavala Railway Station and 12 km from Tung Fort,
-                Tiger's Leap or Tiger's Point is a scenic viewpoint situated at Kurvande on the route towards Aamby
-                Valley from Lonavala. It is one of the must see tourist places in Lonavala.</p><br>
+                Tikona also known as Vitandgad is the dominant hill fort in Maval in western India. It is located near
+                Kamshet around 60 km from Pune. The village nearest to the fort is called Tikona-Peth. The 3500 ft high
+                hill is pyramidal in shape and the name Tikona means "triangular".</p><br>
             <table class="itble class r1">
-                <tr>
-                    <td class="r1">Visiting time</td>
-                    <td class="r1">24 hours</td>
-                </tr>
-                <tr>
-                    <td class="r1">Ticket</td>
-                    <td class="r1">&#8377; 50 </td>
-                </tr>
-            </table>
+                <h3 class="r24 bmn">Reachability</h3>
+                <p class="r1 bmn">
+                    At a distance of 12 km from Lonavala Railway Station and 12 km from Tung Fort,
+                    Tiger's Leap or Tiger's Point is a scenic viewpoint situated at Kurvande on the route towards Aamby
+                    Valley from Lonavala. It is one of the must see tourist places in Lonavala.</p><br>
+                <table class="itble class r1">
+                    <tr>
+                        <td class="r1">Visiting time</td>
+                        <td class="r1">24 hours</td>
+                    </tr>
+                    <tr>
+                        <td class="r1">Ticket</td>
+                        <td class="r1">&#8377; 50 </td>
+                    </tr>
+                </table>
         </div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30234.2741964991!2d73.36772553955078!3d18.696086900000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be803ec63c748df%3A0xb440dcf326c3e04a!2sTiger%20Point%20Lonavala!5e0!3m2!1sen!2sin!4v1615217708390!5m2!1sen!2sin"
             id="map2" class="map">
         </iframe>
 
-        <h2 class="r3">Lohagad Fort</h2>
+        <h2 class="r3">Tikona Fort</h2>
         <div id="img">
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Tikona also known as Vitandgad is the dominant hill fort in Maval in western India. It is located near
+                Kamshet around 60 km from Pune. The village nearest to the fort is called Tikona-Peth. The 3500 ft high
+                hill is pyramidal in shape and the name Tikona means "triangular". </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
-                At a distance of 11 km from Lonavala, 66 km from Pune & 114 km from Mumbai,
-                the Lohagad Fort (Iron Fort) is a historical fort situated along the Sahyadri hills in Lonavala region
-                of Maharashtra.</p><br>
+                By train:
+                To get to the fort, you need to board a train that will lead you to the Pune Railway Station. From Pune
+                Railway Station, Tikona Fort is situated at a distance of 60 km.
+                By Road:
+                Tikona Fort is located at a distance of 60 km and 130 km from Pune and Mumbai, respectively. You can
+                easily find buses or rental cabs both from Mumbai and Pune to drop you to the Tikona Fort.
+            </p><br>
             <table class="itble class r1">
                 <tr>
                     <td class="r1">Visiting time</td>
-                    <td class="r1">6am-5:30pm</td>
+                    <td class="r1">12:00 AM - 11:59 PM</td>
                 </tr>
                 <tr>
                     <td class="r1">Ticket</td>
@@ -87,7 +102,7 @@
             </table>
         </div>
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.9692570673437!2d73.47367311489556!3d18.710194487298793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2a9e5ec73dc55%3A0x40175d3a5814b5d!2sLohagad%20Fort%2C%20Lohagad%20Trek%20Rd%2C%20Maharashtra%20410406!5e0!3m2!1sen!2sin!4v1615218078766!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.7159209644465!2d73.51056161489436!3d18.631842987344395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2a62ca9627c27%3A0xf52f1b92e0a6e314!2sTikona%20Fort%2C%20Tikona%20Peth%2C%20Tikona%20hiking%20Trail%2C%20near%20Pawna%20Dam%2C%20Maharashtra%20412108!5e0!3m2!1sen!2sin!4v1615553443236!5m2!1sen!2sin"
             id="map2" class="map">
         </iframe>
 
