--- a/lonavala/waterbodies.html
+++ b/lonavala/waterbodies.html
@@ -44,20 +44,26 @@
 
         </div>
         <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Reachability</h3>
+            <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
-                At a distance of 4 km from Lonavala, almost 10 min by car or taxi from the lonavala railway station.
-            </p><br>
+                Lonavala Waterfall is situated a little high up on the Bushi Dam near the Lonavala Railway Station.
+                These waterfalls in Lonavala is a popular picnic spot in the area and has a number of small eateries and
+                food stalls selling knick-knacks.</p><br>
             <table class="itble class r1">
-                <tr>
-                    <td class="r1">Visiting time</td>
-                    <td class="r1">09:00 AM - 03:00 PM</td>
-                </tr>
-                <tr>
-                    <td class="r1">Ticket</td>
-                    <td class="r1">&#8377; 0 </td>
-                </tr>
-            </table>
+                <h3 class="r24 bmn">Reachability</h3>
+                <p class="r1 bmn">
+                    At a distance of 4 km from Lonavala, almost 10 min by car or taxi from the lonavala railway station.
+                </p><br>
+                <table class="itble class r1">
+                    <tr>
+                        <td class="r1">Visiting time</td>
+                        <td class="r1">09:00 AM - 03:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td class="r1">Ticket</td>
+                        <td class="r1">&#8377; 0 </td>
+                    </tr>
+                </table>
         </div>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3778.3610179695706!2d73.40795461489604!3d18.737404587283006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be8016d46074c3f%3A0x6a8795cf0b4b2cf4!2sLonavala%20Lake%20Waterfall!5e0!3m2!1sen!2sin!4v1615219117101!5m2!1sen!2sin"
@@ -69,6 +75,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Pavana Lake, also known as Pavana Dam Reservoir and Pawna Lake, is a reservoir turned artificial lake in
+                the Indian state of Maharashtra, formed by the Pavana Dam across the Pavana River in Pune district. </p>
+            <br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Lonavala is just 30 Km away from Pawna Lake. To cover this distance, all you need to do is hire a
