--- a/mumbai/beach.html
+++ b/mumbai/beach.html
@@ -44,6 +44,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Juhu is popular for lively Juhu Chowpatty Beach, a long stretch where casual cricket matches are played,
+                and beach vendors offer snacks like bhel puri and ice cream. Nearby, chic bars serve everything from
+                local beer to cocktails, while the white marble ISKCON temple serves up vegetarian fare and baked goods.
+                Contemporary and experimental plays take the stage at Prithvi Theatre. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 To reach Juhu Beach from the Mumbai airport, you can take the train to Santacruz.
@@ -74,6 +80,12 @@
         <div id="img">
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Marine Drive is a 3.6-kilometre-long Promenade along the Netaji Subhash Chandra Bose Road in Mumbai,
+                India. Often, the names Marine Drive and Mareens are used interchangeably to refer to this 3.9km
+                stretch. The road and promenade were constructed by late philanthropist Bhagojisheth Keer and Pallonji
+                Mistry.</p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 The best way to reach Marine Drive in Mumbai is by taking the local train from three nearest stations -
