--- a/mumbai/monuments.html
+++ b/mumbai/monuments.html
@@ -46,6 +46,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                The Gateway of India is an arch-monument built in the early twentieth century in the city of Mumbai, in
+                the Indian state of Maharashtra. It was erected to commemorate the landing in December 1911 at Apollo
+                Bunder, Mumbai of King-Emperor George V and Queen-Empress Mary, the first British monarch to visit
+                India. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Train, Bus – First, you need to reach Vile Parle Railway Terminus from Chhatrapati Shivaji International
@@ -76,10 +82,14 @@
 
         </div>
         <div class="reach bmn" id="reach">
-            <h3 class="r24 bmn">Info & Reach</h3>
+            <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
                 Chhatrapati Shivaji Terminus, also known by its former name Victoria Terminus, is a historic terminal
-                train station and UNESCO World Heritage Site in Mumbai, Maharashtra, India.
+                train station and UNESCO World Heritage Site in Mumbai, Maharashtra, India. The terminus was designed by
+                British born architectural engineer Frederick William Stevens, in an exuberant Italian Gothic style.
+            </p><br>
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
                 The reachablity of the place is good, no matter how you travel
                 means in taxi or in public transport. </p><br>
         </div>
