--- a/mumbai/zoo_and_gardern.html
+++ b/mumbai/zoo_and_gardern.html
@@ -47,6 +47,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Veermata Jijabai Bhonsale Udyan, also known as the Byculla Zoo, is a zoo and garden covering 50 acres
+                located at Byculla, in the heart of Mumbai, India. It is the oldest public garden in Mumbai. After
+                Indian independence it was Named after Jijamata, the mother of Shivaji, the first Maratha emperor. </p>
+            <br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Veermata Jijabai Bhosale Udyan (Byculla zoo or Rani Baug) It takes about 1 hour to reach Byculla and you
@@ -75,6 +81,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                The Hanging Gardens, in Mumbai, also known as Pherozeshah Mehta Gardens, are terraced gardens perched at
+                the top of Malabar Hill, on its western side, just opposite the Kamala Nehru Park. They provide sunset
+                views over the Arabian Sea and feature numerous hedges carved into the shapes of animals. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 You can catch a local train till 'Charni Road' and grab a taxi from there to the Hanging Gardens, which
