--- a/nasik/religious_place.html
+++ b/nasik/religious_place.html
@@ -44,6 +44,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Saptashrungi or Saptashringi is a site of Hindu pilgrimage situated 60 kilometres from Nashik in Indian
+                state of Maharashtra. According to Hindu traditions, the goddess Saptashrungi Nivasini dwells within the
+                seven mountain peaks. It is located in Nanduri, Kalwan taluka, a small village near Nashik in India.
+            </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 The nearest railway station to Saptashrungi is the Nashik Railway Station.
@@ -70,6 +76,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                The Kalaram Temple is an old Hindu shrine dedicated to Rama in the Panchavati area of Nashik city in
+                Maharashtra, India. It is probably the most important Hindu shrine in the city. The temple derives its
+                name from a black statue of Lord Rama. The literal translation of kalaram is "black Rama".
+            </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 At a distance of 2.5 km from Nashik Central Bus Station, Sri Kalaram Temple is an old Hindu shrine
@@ -97,6 +109,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Trimbakeshwar Shiva JyotirlingaTemple त्र्यम्बकेश्वर शिव ज्योर्तिलिंग मन्दिर is an ancient Hindu temple
+                in the town of Trimbak, in the Trimbakeshwar tehsil in the Nashik District of Maharashtra, India, 28 km
+                from the city of Nashik and 40 km from Nashik road. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Distance Between Nashik to Trimbakeshwar Is 28 Kms , Duration, Driving Directions & Route Map.
