--- a/nasik/trek.html
+++ b/nasik/trek.html
@@ -44,6 +44,12 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Harihar fort / Harshagad is a fort located 40km from Nashik City, 48 km from Igatpuri, 40 km from Ghoti
+                in Nashik district, of Maharashtra. It is an important fort in Nashik district, and was constructed to
+                look upon the trade route through Gonda Ghat. It receives many visitors because of its peculiar rock-cut
+                steps. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 By Air: The nearest airport to Harihar Fort is located in Mumbai at a distance of about 165 km. From the
@@ -71,6 +77,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Brahmagiri is a mountain range in the Western Ghats of Maharashtra. It is situated in Nashik District in
+                the Indian state of Maharashtra. Trimbakeshwar Shiva Temple is located near this place. The origin of
+                the sacred Godavari river is near Trimbak. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 A 10 minutes' walk from Trimbakeshwar towards Brahmagiri brings visitors to a signboard that indicates
@@ -99,6 +110,11 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Sula Vineyards is a winery and vineyard located in the Nashik region of western India,180 km northeast
+                of Mumbai. It was founded by Rajeev Samant in 1999. Sula has grown to be India’s largest and most
+                awarded wine brand. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Sula Vinyards is located approx 20 - 25 kms from Nasik railway station (sort of country side).
