--- a/nasik/waterfall.html
+++ b/nasik/waterfall.html
@@ -45,6 +45,10 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Dugarwadi waterfall is 30 kilometres from Nashik on Trimbakeshwar road and 2 kilometres from the Jawhaar
+                road. In monsoon season, people are advised to take care as the water level suddenly rises. </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 To reach the Dugarwadi falls, visitors need to drive up to Sapgon on NH-848, which is about 4 km from
@@ -73,11 +77,14 @@
 
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Small waterfall on the Godavari River, at its strongest during monsoon & surrounded by temples.</p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 At a distance of 2 km from Someshwar Temple and 9 km from Nashik Central Bus Station,
-                Someshwar Waterfalls is a breathtaking waterfalls situated near Gangapur on the suburbs of Nashik.</p>
-            <br>
+                Someshwar Waterfalls is a breathtaking waterfalls situated near Gangapur on the suburbs of Nashik.
+            </p><br>
             <table class="itble class r1">
                 <tr>
                     <td class="r1">Visiting time</td>
