--- a/pune/monuments.html
+++ b/pune/monuments.html
@@ -44,6 +44,11 @@
         <div id="img">
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24">Info</h3>
+            <p class="r1 bmn tmn">
+                Shaniwarwada is a historical fortification in the city of Pune in Maharashtra, India. Built in 1732, it
+                was the great seat of the Peshwas of the Maratha Empire until 1818, when the Peshwas lost control to the
+                British East India Company after the Third Anglo-Maratha War.</p>
             <h3 class="r24">Reachability</h3>
             <p class="r1 bmn tmn">
                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this
@@ -52,8 +57,8 @@
                 to commute on this route.</p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
-                    <td class="r1">3 Hours</td>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1">8:00 am to 6:30 pm</td>
                 </tr>
                 <tr>
                     <td class="r1">Ticket</td>
@@ -71,6 +76,12 @@
         <div id="img">
         </div>
         <div class="reach" id="reach">
+            <h3 class="r24 bmn tmn">Info</h3>
+            <p class="r1 bmn">
+                The Aga Khan Palace was built by Sultan Muhammed Shah Aga Khan III in Pune, India. The palace was an act
+                of charity by the spiritual leader of the Nizari Ismaili Muslims, who wanted to help the poor in the
+                neighbouring areas of Pune, who were drastically hit by famine. The Aga Khan Palace is a majestic
+                building. </p>
             <h3 class="r24 bmn tmn">Reachability</h3>
             <p class="r1 bmn">
                 Pune Airport is at a distance of 12 KM from Shaniwar Wada. It will take around 25 minutes to reach this
@@ -79,8 +90,8 @@
                 to commute on this route.</p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
-                    <td class="r1">2 Hours</td>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1">9:00 am to 5:30 pm</td>
                 </tr>
                 <tr>
                     <td class="r1">Ticket</td>
