--- a/pune/trek_and_gardern.html
+++ b/pune/trek_and_gardern.html
@@ -43,6 +43,12 @@
         <div id="img">
         </div>
         <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Sinhagad is a hill fortress located at around 35 km southwest of the city of Pune, India. Some of the
+                information available at this fort suggests that the fort could have been built 2000 years ago. The
+                caves and the carvings in the Kaundinyeshwar temple stand as proofs for the same.
+            </p>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Sinhagad fort :The nearest railway station Pune Railway Station, located about
@@ -53,7 +59,7 @@
             </p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">Average visiting time</td>
                     <td class="r1">3 Hours</td>
                 </tr>
                 <tr>
@@ -72,7 +78,14 @@
         </iframe>
 
         <h4 class="r3">Pune-Okayama Friendship Garden </h4>
-        <div class="reach" id="reach">
+        <div id="img">
+        </div>
+         <div class="reach" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Pune-Okayama Friendship Garden or Pu La Deshpande Udyan is one of the largest gardens in Pune located on
+                Sinhagad Road in Pune, Maharashtra, India.
+            </p>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 Pune-Okayama Friendship Garden :From Pune Railway Station, located about 9km
@@ -83,7 +96,7 @@
             </p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">Average visiting time</td>
                     <td class="r1">3 Hours</td>
                 </tr>
                 <tr>
