--- a/pune/waterbodies.html
+++ b/pune/waterbodies.html
@@ -40,13 +40,18 @@
                 <li class="other r1 present" id="other3"><a href="./waterbodies.html">Waterbodies</a></li>
             </ul>
         </div>
-        <h2 class="r3">Khadakwasla & Pashan Lake</h2>
+        <h2 class="r3">Khadakwasla</h2>
         <div id="img">
 
         </div>
 
         <h4 class="r2 bmn">Khadakwasla </h4>
         <div class="reach" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 tmn">
+                Khadakwasla Dam is a dam on the Mutha River 21 km (13 mi) from the centre of the city of Pune in
+                Maharashtra, India. The dam created a reservoir known as Khadakwasla Lake which is the main source
+                of water for Pune and its suburbs. </p>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 tmn">
                 Khadakwasla :- Pune Railway Station, located about 17km from the dam.
@@ -55,7 +60,7 @@
             </p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">Average visiting time</td>
                     <td class="r1">3 Hours</td>
                 </tr>
                 <tr>
@@ -71,7 +76,16 @@
         </iframe>
 
         <h4 class="r2 bmn">Pashan Lake </h4>
+        <div id="img">
+
+        </div>
         <div class="reach" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 tmn">
+                Pashan Lake has gained a lot of popularity as a major tourist spot in Pune. The beauty and serenity
+                offered by this lake captivate and lure a host of photo fanatics and bird lovers to visit the place
+                frequently. In addition to tourists, the pleasant atmosphere and green surroundings also propel many
+                migratory birds to the lake each year. </p>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 tmn">
                 Pashan lake :- Pune Railway Station, located about 13-15km from the Lake.
@@ -81,7 +95,7 @@
             </p>
             <table class="itble class r1">
                 <tr>
-                    <td class="r1">Avrage visiting time</td>
+                    <td class="r1">Average visiting time</td>
                     <td class="r1">3 Hours</td>
                 </tr>
                 <tr>
