added images code:0

--- a/nasik/monuments.html
+++ b/nasik/monuments.html
@@ -73,6 +73,40 @@
             id="map2" class="map">
         </iframe>
 
+        <h2 class="r3">Harihar Fort</h2>
+        <div id="img">
+
+        </div>
+        <div class="reach bmn" id="reach">
+            <h3 class="r24 bmn">Info</h3>
+            <p class="r1 bmn">
+                Harihar fort / Harshagad is a fort located 40km from Nashik City, 48 km from Igatpuri, 40 km from Ghoti
+                in Nashik district, of Maharashtra. It is an important fort in Nashik district, and was constructed to
+                look upon the trade route through Gonda Ghat. It receives many visitors because of its peculiar rock-cut
+                steps. </p><br>
+            <h3 class="r24 bmn">Reachability</h3>
+            <p class="r1 bmn">
+                By Air: The nearest airport to Harihar Fort is located in Mumbai at a distance of about 165 km. From the
+                airport, you can get a direct cab to Harihar Fort. <br>
+                By Rail: Nashik is the nearest railhead from Harihar Fort. ... <br>
+                By Road: As Harihar Fort is located atop a hill, it cannot be accessed by road. </p><br>
+            <table class="itble class r1">
+                <tr>
+                    <td class="r1">Visiting time</td>
+                    <td class="r1">7am–6pm</td>
+                </tr>
+                <tr>
+                    <td class="r1">Ticket</td>
+                    <td class="r1">&#8377; 100 </td>
+                </tr>
+            </table>
+        </div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.4667864780818!2d73.4697492149141!3d19.90472508661792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdd8aa165defa41%3A0xbd233aa44468637e!2sHarihar%20Fort!5e0!3m2!1sen!2sin!4v1615099817187!5m2!1sen!2sin"
+            id="map2" class="map">
+        </iframe>
+
+
 
 
         <div class="hotelp" id="hotelp">
