--- a/nasik/waterfall.html
+++ b/nasik/waterfall.html
@@ -79,7 +79,10 @@
         <div class="reach bmn" id="reach">
             <h3 class="r24 bmn">Info</h3>
             <p class="r1 bmn">
-                Small waterfall on the Godavari River, at its strongest during monsoon & surrounded by temples.</p><br>
+                Dudhsagar Waterfalls, popularly known as Someshwar Waterfalls, is one of the most favorite hangout
+                places of Nasik. This small and beautiful waterfall is formed over the holy River Godavari. ... There is
+                also a Balaji Temple near the waterfall which is a must visit place.
+            </p><br>
             <h3 class="r24 bmn">Reachability</h3>
             <p class="r1 bmn">
                 At a distance of 2 km from Someshwar Temple and 9 km from Nashik Central Bus Station,
