added photos to home page code:0

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
-    <top id="top"></top>
+    
     <nav id="navbar">
         <div id="logo">
             <img src="images/page genral contents/region-code.png" alt="">
@@ -40,10 +40,10 @@
 
     <section class="about" id="about">
         <!-- <h1 class="hprimary st" id="wel">Welcome to travel Guide</h1> -->
-        <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to
+        <!-- <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to
             visit. You would know which place to visit in your
             With a brief of accommodation, reachablity, time taken to visit a place and average
-            budget</p>
+            budget</p> -->
     </section>
 
 
@@ -52,24 +52,24 @@
     <!-- chooseing spot content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
 
+    <top id="top"></top>
     <section class="places" id="places">
         <h1 class="hprimary topic">Places to choose from </h1>
         <div id="choose">
             <div class="name"><a href="#mumbai">
                     <div class="pimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                        <img src="./images/place/tinified/mumbai.jpg" alt="image ">
                     </div>
                     <h1 class="hsecondary">Mumbai</h1>
                     <p class="psecondary">MUMBAI (formerly called Bombay) is a densely populated city on India’s west
                         coast. A financial center, it's India's largest city. On the Mumbai Harbour waterfront stands
                         the iconic Gateway of India stone arch, built by the British Raj in 1924. Offshore, nearby
-                        Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva.
-                        PUNE</p>
+                        Elephanta Island holds ancient cave temples dedicated to the Hindu god Shiva.</p>
                 </a>
             </div>
             <div class="name"><a href="#pune">
                     <div class="pimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/place/tinified/pune.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Pune</h1>
                     <p class="psecondary">Pune also known as poona until 1978 which was the base for peshwas of
@@ -81,38 +81,36 @@
             </div>
             <div class="name"><a href="#nasik">
                     <div class="pimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/place/tinified/nasik.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Nasik</h1>
                     <p class="psecondary">Nashik is an ancient holy city in Maharashtra, a state in western India. It’s
-                        known for its links to the “Ramayana” epic poem. On the Godavari River is Panchavati, a temple
-                        complex. Nearby, Lord Rama was thought to have bathed at Ram Kund water tank, today attended by
-                        Hindu devotees. Shri Kalaram Sansthan Mandir is an ancient shrine to Rama, while Rama and Sita
-                        are said to have worshipped at Sita Gufa caves.</p>
+                        known for its links to the “Ramayana” epic poem. On the Godavari River is Panchavati. Nearby,
+                        Lord Rama was thought to have bathed at Ram Kund water tank. Shri Kalaram
+                        Sansthan Mandir is an ancient shrine to Rama, while Rama and Sita are said to have worshipped at
+                        Sita Gufa caves.</p>
                 </a>
             </div>
             <div class="name"><a href="#ajanta">
                     <div class="pimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/place/tinified/ajanta_ellora.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">Ajanta Ellora</h1>
                     <p class="psecondary">The Ajanta Caves are approximately 30 rock-cut Buddhist cave monuments which
                         date from the 2nd century BCE to about 480 CE.Ellora is a UNESCO World Heritage Site located in
                         the Aurangabad district of Maharashtra, India. It is one of the largest rock-cut
-                        monastery-temple cave complexes in the world, featuring Hindu, Buddhist and Jain monuments, and
-                        artwork, dating from the 600–1000 CE period.</p>
+                        monastery-temple cave complexes in the world, dating from the 600–1000 CE period.</p>
                 </a>
             </div>
             <div class="name"><a href="#lonavala">
                     <div class="pimage">
-                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                        <img src="./images/place/tinified/lonavala.jpg" alt="image">
                     </div>
                     <h1 class="hsecondary">lonavala</h1>
                     <p class="psecondary">Lonavala is a hill station surrounded by green valleys in western India. The
                         Karla Caves and the Bhaja Caves are ancient Buddhist shrines carved out of the rock.
-                        They feature massive pillars and intricate relief sculptures. South of the Bhaja Caves sits the
-                        imposing Lohagad Fort, with its 4 gates. West of here is Bhushi Dam, where water overflows onto
-                        a set of steps during rainy season.</p>
+                        South of the Bhaja Caves sits the imposing Lohagad Fort, with its 4 gates. West of here is
+                        Bhushi Dam, where water overflows onto a set of steps during rainy season.</p>
                 </a>
             </div>
 
@@ -381,11 +379,7 @@
         <div class="fof">
             <div class="sm"><a href="https://www.facebook.com/"><img src="./images/logo/facebook.png" alt=""></a>
             </div>
-            <div class="sm"><a href="https://github.com/avinashkkumar/semfourproject"><img
-                        src="./images/logo/github.png" alt=""></a></div>
             <div class="sm"><a href="https://www.instagram.com"><img src="./images/logo/instagram.png" alt=""></a>
-            </div>
-            <div class="sm"><a href="https://www.linkedin.com"><img src="./images/logo/linkedin.png" alt=""></a>
             </div>
             <div class="sm"><a href="https://www.pinterest.com"><img src="./images/logo/pinterest.png" alt=""></a>
             </div>
